Refactor CleanCapture for improved print fidelity and UX
- Implement clone-and-print to capture the final modified layout for PDF output.
- Force a robust layout reflow with a slight delay before printing.
- Add a "Reset" button to restore the original page layout.
- Enhance control panel positioning to ensure it remains on-screen.
- Add keyboard support for moving elements (arrows) and deleting them (Delete key).
- Improve accessibility by adding ARIA roles and labels.
- Modularize the JavaScript code for better maintainability.

--- a/cleancapture.html
+++ b/cleancapture.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <title>CleanCapture</title>
     <link rel="stylesheet" type="text/css" href="cleancapture.css">
-    <!-- Including external CSS from the original site -->
+    <!-- These external stylesheets are included so the captured page appears as close as possible to the original -->
     <link type="text/css" rel="stylesheet" href="https://www.ncsf.org/e-learning/courses/media/css/pc.css">
     <link type="text/css" rel="stylesheet" href="https://www.ncsf.org/e-learning/courses/media/css/forms.css">
   </head>
   <body>
     <div id="buttonContainer">
-      <button id="savePdf">Save as PDF</button>
-      <button id="undoAction">Undo</button>
+      <button id="savePdf" aria-label="Save as PDF">Save as PDF</button>
+      <button id="undoAction" aria-label="Undo last action">Undo</button>
+      <button id="resetAction" aria-label="Reset layout to original">Reset</button>
     </div>
     <!-- Shortcut info icon and popup -->
     <div id="shortcutInfo">
-      <span id="shortcutIcon">?</span>
+      <span id="shortcutIcon" aria-label="Keyboard shortcuts info" tabindex="0">?</span>
       <div id="shortcutPopup">
         <strong>Keyboard Shortcuts:</strong>
         <ul>
